<resources>
    <string name="app_name">Netclan Clone</string>
    <string name="title_explore">Explore</string>
    <string name="title_network">Network</string>
    <string name="title_chat">Chat</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_groups">Groups</string>
    <string name="network_fragment_name">This is network fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>