<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/explore"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_network"
        android:icon="@drawable/network"
        android:title="@string/title_network" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/contacts"
        android:title="@string/title_contacts" />
    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/groups"
        android:title="@string/title_groups" />


</menu>

